-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.2, 6.5.3, 6.6.0
-
None
-
-
a744d3082 (dev)
The fix for QTBUG-115461 didn't fully fix the issue, it's still reproducible with QOpenGLWidget. I tried to patch Qt to force both QBackingStoreDefaultCompositor::createPerQuadData and QBackingStoreDefaultCompositor::updatePerQuadData to always use m_samplerLinear, the issue disappears then.
- resulted from
-
QTBUG-115461 [REG 6.5.1 -> 6.5.2] QT_WIDGETS_HIGHDPI_DOWNSCALE is broken again
-
- Closed
-
For Gerrit Dashboard: QTBUG-119444 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
523066,3 | Use linear filtering with downscaling also with QOpenGLWidget | dev | qt/qtbase | Status: MERGED | +2 | 0 |
523468,1 | Use linear filtering with downscaling also with QOpenGLWidget | 6.6 | qt/qtbase | Status: ABANDONED | 0 | 0 |