Use linear filtering with downscaling also with QOpenGLWidget

Amends 9505305c403423f58e70471aaf55994bb734a0bd

Fixes: QTBUG-119444
Pick-to: 6.6 6.5
Change-Id: I88c31bcdf42ac4ffef122e49f088cc764db8c384
Reviewed-by: Ilya Fedin <fedin-ilja2010@ya.ru>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>